home page + tradebook page
